--- a/Recall.Tests/Recall.Tests.csproj
+++ b/Recall.Tests/Recall.Tests.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Arrays\ArrayTests.cs" />
     <Compile Include="Arrays\DefaultArrayTests.cs" />
+    <Compile Include="Collections\ListTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
