Finished read-write of array to stream.

--- a/Recall/Recall.csproj
+++ b/Recall/Recall.csproj
@@ -58,6 +58,7 @@
     <Compile Include="IO\MappedFile.cs" />
     <Compile Include="IO\MappedStream.cs" />
     <Compile Include="IO\Streams\CappedStream.cs" />
+    <Compile Include="IO\Streams\LimitedStream.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
