--- a/Recall.Tests/Recall.Tests.csproj
+++ b/Recall.Tests/Recall.Tests.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Arrays\VariableArrayTests.cs" />
     <Compile Include="Arrays\ArrayTests.cs" />
     <Compile Include="Arrays\DefaultArrayTests.cs" />
     <Compile Include="Collections\ListTests.cs" />
