--- a/Recall/Recall.csproj
+++ b/Recall/Recall.csproj
@@ -43,12 +43,13 @@
     <Compile Include="Arrays\Array.cs" />
     <Compile Include="Arrays\Cache\BinaryHeapULong.cs" />
     <Compile Include="Arrays\Cache\LRUCache.cs" />
-    <Compile Include="Arrays\DefaultArray.cs" />
+    <Compile Include="Arrays\MemoryArray.cs" />
     <Compile Include="Arrays\ArrayBase.cs" />
     <Compile Include="Arrays\MappedArray.cs" />
     <Compile Include="Arrays\VariableArray.cs" />
     <Compile Include="Collections\Dictionary.cs" />
     <Compile Include="Collections\List.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="Indexes\Index.cs" />
     <Compile Include="IO\Accessors\MappedAccessorInt32.cs" />
     <Compile Include="IO\Accessors\MappedAccessorInt64.cs" />
