--- a/nuspec/Reminiscence.nuspec
+++ b/nuspec/Reminiscence.nuspec
@@ -6,9 +6,9 @@
         <title>Reminiscence - Simple cross-plaform memory mapping for .NET/Mono.</title>
         <authors>Ben Abelshausen</authors>
         <owners>Ben Abelshausen</owners>
-        <licenseUrl>http://raw.github.com/xivk/OsmSharp/master/license.txt</licenseUrl>
-        <projectUrl>http://www.osmsharp.com/</projectUrl>
-        <iconUrl>http://osmsharp.com/sites/default/files/osmsharp_logo64.png</iconUrl>
+        <licenseUrl>https://raw.githubusercontent.com/OsmSharp/reminiscence/master/license.md</licenseUrl>
+        <projectUrl>https://github.com/OsmSharp/reminiscence</projectUrl>
+        <iconUrl>https://raw.githubusercontent.com/OsmSharp/reminiscence/master/nuspec/icon.png</iconUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>Simple cross-plaform memory mapping for .NET/Mono.</description>
         <summary>Reminiscence is a lightweight crossplatform memorymapping library to bring some form of memorymapping to .NET/Mono on any platform.</summary>
