--- a/nuspec/Reminiscence.nuspec
+++ b/nuspec/Reminiscence.nuspec
@@ -3,7 +3,7 @@
     <metadata>
         <id>Reminiscence</id>
         <version>$version$</version>
-        <title>Reminiscence - Simple cross-plaform memory mapping for .NET/Mono.</title>
+        <title>Reminiscence - Simple cross-platform memory mapping for .NET/Mono.</title>
         <authors>Ben Abelshausen</authors>
         <owners>Ben Abelshausen</owners>
         <licenseUrl>https://raw.githubusercontent.com/OsmSharp/reminiscence/master/license.md</licenseUrl>
