--- a/Reminiscence/Reminiscence.csproj
+++ b/Reminiscence/Reminiscence.csproj
@@ -65,6 +65,7 @@
     <Compile Include="IO\MemoryMapStream.cs" />
     <Compile Include="IO\Streams\CappedStream.cs" />
     <Compile Include="IO\Streams\LimitedStream.cs" />
+    <Compile Include="ISerializableToStream.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
