Properly retargeted nuspec.

--- a/nuspec/Reminiscence.nuspec
+++ b/nuspec/Reminiscence.nuspec
@@ -16,6 +16,6 @@
         <tags>memory, memorymapping, collections</tags>
     </metadata>
     <files>
-        <file src="Output\Reminiscence.dll" target="lib\portable-net40+sl4+win8+wp7\Reminiscence.dll" />
+      <file src="Output\Reminiscence.dll" target="lib\portable-net403+sl50+win+wp80+Xamarin.iOS10+MonoAndroid10+MonoTouch10" />
     </files>
 </package>
