Restructured MSBuild solution.

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\Recall.Tests\packages.config" />
-  <repository path="..\Reminiscence.Tests\packages.config" />
+  <repository path="../test/Reminiscence.Tests/packages.config" />
 </repositories>
