--- a/nuspec/Reminiscence.nuspec
+++ b/nuspec/Reminiscence.nuspec
@@ -17,5 +17,6 @@
     </metadata>
     <files>
       <file src="Output\Reminiscence.dll" target="lib\portable-net403+sl50+win+wp80+Xamarin.iOS10+MonoAndroid10+MonoTouch10" />
+      <file src="src\Reminiscence\bin\Debug\netstandard1.6\Reminiscence.dll" target="lib\netstandard1.6" />
     </files>
 </package>
