--- a/src/Reminiscence/project.json
+++ b/src/Reminiscence/project.json
@@ -8,6 +8,13 @@
   "frameworks": {
     "netstandard1.6": {
       "imports": "dnxcore50"
+    },
+    ".NETPortable,Version=v4.0,Profile=Profile147": {
+      "frameworkAssemblies": {
+        "mscorlib": "",
+        "System": "",
+        "System.Core": ""
+      }
     }
   }
 }
