--- a/src/Reminiscence/project.lock.json
+++ b/src/Reminiscence/project.lock.json
@@ -2,6 +2,11 @@
   "locked": false,
   "version": 2,
   "targets": {
+    ".NETPortable,Version=v4.0,Profile=Profile147": {
+      "NETStandard.Library/1.6.0": {
+        "type": "package"
+      }
+    },
     ".NETStandard,Version=v1.6": {
       "Microsoft.NETCore.Platforms/1.0.1": {
         "type": "package",
@@ -4018,6 +4023,11 @@
   "projectFileDependencyGroups": {
     "": [
       "NETStandard.Library >= 1.6.0"
+    ],
+    ".NETPortable,Version=v4.0,Profile=Profile147": [
+      "System",
+      "System.Core",
+      "mscorlib"
     ],
     ".NETStandard,Version=v1.6": []
   },
