--- a/nuspec/Reminiscence.nuspec
+++ b/nuspec/Reminiscence.nuspec
@@ -17,6 +17,7 @@
     </metadata>
     <files>
       <file src="src\Reminiscence\bin\Release\portable40-net403+sl5+win8+wp8\Reminiscence.dll" target="lib\portable-net403+sl50+win+wp80+Xamarin.iOS10+MonoAndroid10+MonoTouch10" />
-      <file src="src\Reminiscence\bin\Release\netstandard1.6\Reminiscence.dll" target="lib\netstandard1.6" />
+      <file src="src\Reminiscence\bin\Release\netstandard1.3\Reminiscence.dll" target="lib\netstandard1.3" />
+      <file src="src\Reminiscence\bin\Release\portable45-net45+win8+wp8+wpa81\Reminiscence.dll" target="lib\portable-net45+win8+wpa81+wp8" />
     </files>
 </package>
