--- a/src/Reminiscence/project.json
+++ b/src/Reminiscence/project.json
@@ -6,15 +6,22 @@
   },
 
   "frameworks": {
-    "netstandard1.6": {
-      "imports": "dnxcore50"
-    },
     ".NETPortable,Version=v4.0,Profile=Profile147": {
       "frameworkAssemblies": {
         "mscorlib": "",
         "System": "",
         "System.Core": ""
       }
+    },
+    ".NETPortable,Version=v4.5,Profile=Profile259": {
+      "frameworkAssemblies": {
+        "mscorlib": "",
+        "System": "",
+        "System.Core": ""
+      }
+    },
+    "netstandard1.3": {
+      "imports": "dnxcore50"
     }
   }
 }
