--- a/src/Reminiscence/project.json
+++ b/src/Reminiscence/project.json
@@ -7,6 +7,14 @@
 
   "frameworks": {
     ".NETPortable,Version=v4.0,Profile=Profile147": {
+      "buildOptions": {
+        "define": [ "PORTABLE147" ],
+        "compile": {
+          "includeFiles": [
+            "../../SharedAssemblyVersion.cs"
+          ]
+        }
+      },
       "frameworkAssemblies": {
         "mscorlib": "",
         "System": "",
@@ -14,6 +22,14 @@
       }
     },
     ".NETPortable,Version=v4.5,Profile=Profile259": {
+      "buildOptions": {
+        "define": [ "PORTABLE259" ],
+        "compile": {
+          "includeFiles": [
+            "../../SharedAssemblyVersion.cs"
+          ]
+        }
+      },
       "frameworkAssemblies": {
         "mscorlib": "",
         "System": "",
@@ -22,6 +38,30 @@
     },
     "netstandard1.3": {
       "imports": "dnxcore50"
+    },
+    "net4.0": {
+      "buildOptions": {
+        "define": [ "NET40" ],
+        "compile": {
+          "includeFiles": [
+            "../../SharedAssemblyVersion.cs"
+          ]
+        }
+      },
+      "frameworkAssemblies": {
+      }
+    },
+    "net4.5": {
+      "buildOptions": {
+        "define": [ "NET45" ],
+        "compile": {
+          "includeFiles": [
+            "../../SharedAssemblyVersion.cs"
+          ]
+        }
+      },
+      "frameworkAssemblies": {
+      }
     }
   }
 }
