Updated readme and tests a bit.

--- a/src/Reminiscence.Stresstests/Reminiscence.Stresstests.csproj
+++ b/src/Reminiscence.Stresstests/Reminiscence.Stresstests.csproj
@@ -17,8 +17,14 @@
     <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" />
+
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="xunit" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
