--- a/nuspec/Reminiscence.nuspec
+++ b/nuspec/Reminiscence.nuspec
@@ -15,6 +15,25 @@
         </summary>
         <copyright>Ben Abelshausen</copyright>
         <tags>memory, memorymapping, collections</tags>
+        <dependencies>
+            <group targetFramework=".NETFramework4.5">
+                <dependency id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" />
+                <dependency id="System.Buffers" version="4.5.0" />
+                <dependency id="System.Memory" version="4.5.1" />
+            </group>
+
+            <group targetFramework=".NETStandard1.3">
+                <dependency id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" />
+                <dependency id="System.Buffers" version="4.5.0" />
+                <dependency id="System.Memory" version="4.5.1" />
+            </group>
+
+            <group targetFramework=".NETStandard2.0">
+                <dependency id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" />
+                <dependency id="System.Buffers" version="4.5.0" />
+                <dependency id="System.Memory" version="4.5.1" />
+            </group>
+        </dependencies>
     </metadata>
     <files>
         <file src="src\Reminiscence\bin\Release\portable40-net403+sl5+win8+wp8\Reminiscence.dll"
