--- a/src/Reminiscence/Reminiscence.csproj
+++ b/src/Reminiscence/Reminiscence.csproj
@@ -4,7 +4,6 @@
     <TargetFrameworks>portable40-net403+sl5+win8+wp8;netstandard1.3;netstandard2.0;net40;net45</TargetFrameworks>
     <AssemblyName>Reminiscence</AssemblyName>
     <PackageId>Reminiscence</PackageId>
-    <NetStandardImplicitPackageVersion>1.6.0</NetStandardImplicitPackageVersion>
     <PackageTargetFallback Condition=" '$(TargetFramework)' == 'netstandard1.3' ">$(PackageTargetFallback);dnxcore50</PackageTargetFallback>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
@@ -16,6 +15,8 @@
     <GenerateAssemblyCopyrightAttribute>false</GenerateAssemblyCopyrightAttribute>
     <GenerateAssemblyInformationalVersionAttribute>false</GenerateAssemblyInformationalVersionAttribute>
     <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'portable40-net403+sl5+win8+wp8' ">
@@ -55,6 +56,12 @@
     <DefineConstants>$(DefineConstants);NET45</DefineConstants>
   </PropertyGroup>
 
+  <!-- net40 and Profile147 aren't supported by packages needed by NativeMemoryArray. -->
+  <PropertyGroup Condition=" '$(TargetFramework)' != 'net40' And '$(TargetFramework)' != 'portable40-net403+sl5+win8+wp8' ">
+    <DefineConstants>$(DefineConstants);SUPPORTS_NATIVE_MEMORY_ARRAY</DefineConstants>
+    <SupportsNativeMemoryArray>True</SupportsNativeMemoryArray>
+  </PropertyGroup>
+
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net45|x64'" />
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
@@ -64,6 +71,12 @@
   <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
+  </ItemGroup>
+
+  <ItemGroup Condition=" '$(SupportsNativeMemoryArray)' == 'True' ">
+    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.5.2" />
+    <PackageReference Include="System.Buffers" Version="4.5.0" />
+    <PackageReference Include="System.Memory" Version="4.5.1" />
   </ItemGroup>
 
 </Project>
