--- a/test/Reminiscence.Tests/Reminiscence.Tests.csproj
+++ b/test/Reminiscence.Tests/Reminiscence.Tests.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="nunit" Version="3.9.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.9.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
+    <PackageReference Include="System.Memory" Version="4.5.1" />
   </ItemGroup>
   
   <ItemGroup>
