--- a/src/Reminiscence/Reminiscence.csproj
+++ b/src/Reminiscence/Reminiscence.csproj
@@ -60,6 +60,10 @@
   <PropertyGroup Condition=" '$(TargetFramework)' != 'net40' And '$(TargetFramework)' != 'portable40-net403+sl5+win8+wp8' ">
     <DefineConstants>$(DefineConstants);SUPPORTS_NATIVE_MEMORY_ARRAY</DefineConstants>
     <SupportsNativeMemoryArray>True</SupportsNativeMemoryArray>
+
+    <!-- Memory-mapped files are not included as a part of .NET Standard 1.3, *but* this feature can
+         be added in by just importing this package. -->
+    <IncludeMemoryMappedFilePackage Condition=" '$(TargetFramework)' == 'netstandard1.3' ">True</IncludeMemoryMappedFilePackage>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net45|x64'" />
@@ -77,6 +81,7 @@
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.5.2" />
     <PackageReference Include="System.Buffers" Version="4.5.0" />
     <PackageReference Include="System.Memory" Version="4.5.1" />
+    <PackageReference Include="System.IO.MemoryMappedFiles" Version="4.3.0" Condition=" '$(IncludeMemoryMappedFilePackage)' == 'True' " />
   </ItemGroup>
 
 </Project>
