--- a/src/Reminiscence/Reminiscence.csproj
+++ b/src/Reminiscence/Reminiscence.csproj
@@ -1,87 +1,30 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFrameworks>portable40-net403+sl5+win8+wp8;netstandard1.3;netstandard2.0;net40;net45</TargetFrameworks>
-    <AssemblyName>Reminiscence</AssemblyName>
-    <PackageId>Reminiscence</PackageId>
-    <PackageTargetFallback Condition=" '$(TargetFramework)' == 'netstandard1.3' ">$(PackageTargetFallback);dnxcore50</PackageTargetFallback>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
-    <GenerateAssemblyDescriptionAttribute>false</GenerateAssemblyDescriptionAttribute>
-    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
-    <GenerateNeutralResourcesLanguageAttribute>false</GenerateNeutralResourcesLanguageAttribute>
-    <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
-    <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-    <GenerateAssemblyCopyrightAttribute>false</GenerateAssemblyCopyrightAttribute>
-    <GenerateAssemblyInformationalVersionAttribute>false</GenerateAssemblyInformationalVersionAttribute>
-    <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <LangVersion>latest</LangVersion>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>netstandard2.0</TargetFramework>
+        <AssemblyName>Reminiscence</AssemblyName>
+        <PackageId>Reminiscence</PackageId>
+        <Title>Reminiscence</Title>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <LangVersion>latest</LangVersion>
+        <PackageVersion>1.4.0-pre004</PackageVersion>
+        <NeutralLanguage>en</NeutralLanguage>
+        <Description>Simple cross-platform memory mapping for .NET/Mono.</Description>
+        <Copyright>Ben Abelshausen</Copyright>
+        <PackageProjectUrl>https://github.com/itinero/reminiscence</PackageProjectUrl>
+        <PackageLicenseUrl>https://raw.githubusercontent.com/itinero/reminiscence/master/license.md</PackageLicenseUrl>
+        <PackageIconUrl>>https://raw.githubusercontent.com/itinero/reminiscence/master/nuspec/icon.png</PackageIconUrl>
+        <RepositoryUrl>https://github.com/itinero/reminiscence</RepositoryUrl>
+        <RepositoryType>git</RepositoryType>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'portable40-net403+sl5+win8+wp8' ">
-    <Reference Include="mscorlib" />
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-  </ItemGroup>
-  
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net40' ">
-    <Reference Include="System" />
-    <Reference Include="Microsoft.CSharp" />
-  </ItemGroup>
+    </PropertyGroup>
 
-  <PropertyGroup Condition=" '$(TargetFramework)' == 'portable40-net403+sl5+win8+wp8' ">
-    <DefineConstants>$(DefineConstants);PORTABLE147</DefineConstants>
-  </PropertyGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'portable40-net403+sl5+win8+wp8' ">
-    <Compile Include="..\..\SharedAssemblyVersion.cs" />
-  </ItemGroup>
-
-  <PropertyGroup Condition="'$(TargetFramework)' == 'portable40-net403+sl5+win8+wp8'">
-    <TargetFrameworkIdentifier>.NETPortable</TargetFrameworkIdentifier>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Profile147</TargetFrameworkProfile>
-  </PropertyGroup>
-
-  <PropertyGroup Condition=" '$(TargetFramework)' == 'net40' ">
-    <DefineConstants>$(DefineConstants);NET40</DefineConstants>
-  </PropertyGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net40' ">
-    <Compile Include="..\..\SharedAssemblyVersion.cs" />
-  </ItemGroup>
-
-  <PropertyGroup Condition=" '$(TargetFramework)' == 'net45' ">
-    <DefineConstants>$(DefineConstants);NET45</DefineConstants>
-  </PropertyGroup>
-
-  <!-- net40 and Profile147 aren't supported by packages needed by NativeMemoryArray. -->
-  <PropertyGroup Condition=" '$(TargetFramework)' != 'net40' And '$(TargetFramework)' != 'portable40-net403+sl5+win8+wp8' ">
-    <DefineConstants>$(DefineConstants);SUPPORTS_NATIVE_MEMORY_ARRAY</DefineConstants>
-    <SupportsNativeMemoryArray>True</SupportsNativeMemoryArray>
-
-    <!-- Memory-mapped files are not included as a part of .NET Standard 1.3, *but* this feature can
-         be added in by just importing this package. -->
-    <IncludeMemoryMappedFilePackage Condition=" '$(TargetFramework)' == 'netstandard1.3' ">True</IncludeMemoryMappedFilePackage>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net45|x64'" />
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
-    <Compile Include="..\..\SharedAssemblyVersion.cs" />
-  </ItemGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
-    <Reference Include="System" />
-    <Reference Include="Microsoft.CSharp" />
-  </ItemGroup>
-
-  <ItemGroup Condition=" '$(SupportsNativeMemoryArray)' == 'True' ">
-    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.5.2" />
-    <PackageReference Include="System.Buffers" Version="4.5.0" />
-    <PackageReference Include="System.Memory" Version="4.5.1" />
-    <PackageReference Include="System.IO.MemoryMappedFiles" Version="4.3.0" Condition=" '$(IncludeMemoryMappedFilePackage)' == 'True' " />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.5.2"/>
+        <PackageReference Include="System.Buffers" Version="4.5.0"/>
+        <PackageReference Include="System.Memory" Version="4.5.1"/>
+        <PackageReference Include="System.IO.MemoryMappedFiles" Version="4.3.0" Condition=" '$(IncludeMemoryMappedFilePackage)' == 'True' "/>
+    </ItemGroup>
 
 </Project>
